--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -6,7 +6,34 @@
 
     <main class="main-content-container">
         <div class="main-content main-content-list container">
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.co/1280x720/269fe6/png" alt="Temporário">
+                </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
 
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Rodrigo Silva
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        30/04/2025 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis illum veritatis cumque quia facere sed expedita facilis vel excepturi nam sunt voluptatum rem et laudantium, quidem consectetur! Incidunt, quae!</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
