--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -33,6 +33,274 @@
                 <div class="recipe-content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis illum veritatis cumque quia facere sed expedita facilis vel excepturi nam sunt voluptatum rem et laudantium, quidem consectetur! Incidunt, quae!</p>
                 </div>
+                <div class="recipe-meta-container">
+                  <div class="recipe-meta recipe-preparation">
+                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch">Preparo</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                  <div class="recipe-meta recipe-servings">
+                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice">Porções</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                </div>
+
+                <footer class="recipe-footer">
+                  <a class="recipe-read-more button button-dark button-full-width" href="/recipe/3/">
+                    <i class="fas fa-eye"></i>
+                    <span>ver mais...</span>
+                  </a>
+                </footer>
+            </div>
+            
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.co/1280x720/269fe6/png" alt="Temporário">
+                </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Rodrigo Silva
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        30/04/2025 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis illum veritatis cumque quia facere sed expedita facilis vel excepturi nam sunt voluptatum rem et laudantium, quidem consectetur! Incidunt, quae!</p>
+                </div>
+                <div class="recipe-meta-container">
+                  <div class="recipe-meta recipe-preparation">
+                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch">Preparo</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                  <div class="recipe-meta recipe-servings">
+                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice">Porções</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                </div>
+
+                <footer class="recipe-footer">
+                  <a class="recipe-read-more button button-dark button-full-width" href="/recipe/3/">
+                    <i class="fas fa-eye"></i>
+                    <span>ver mais...</span>
+                  </a>
+                </footer>
+            </div>
+
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.co/1280x720/269fe6/png" alt="Temporário">
+                </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Rodrigo Silva
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        30/04/2025 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis illum veritatis cumque quia facere sed expedita facilis vel excepturi nam sunt voluptatum rem et laudantium, quidem consectetur! Incidunt, quae!</p>
+                </div>
+                <div class="recipe-meta-container">
+                  <div class="recipe-meta recipe-preparation">
+                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch">Preparo</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                  <div class="recipe-meta recipe-servings">
+                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice">Porções</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                </div>
+
+                <footer class="recipe-footer">
+                  <a class="recipe-read-more button button-dark button-full-width" href="/recipe/3/">
+                    <i class="fas fa-eye"></i>
+                    <span>ver mais...</span>
+                  </a>
+                </footer>
+            </div>
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.co/1280x720/269fe6/png" alt="Temporário">
+                </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Rodrigo Silva
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        30/04/2025 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis illum veritatis cumque quia facere sed expedita facilis vel excepturi nam sunt voluptatum rem et laudantium, quidem consectetur! Incidunt, quae!</p>
+                </div>
+                <div class="recipe-meta-container">
+                  <div class="recipe-meta recipe-preparation">
+                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch">Preparo</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                  <div class="recipe-meta recipe-servings">
+                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice">Porções</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                </div>
+
+                <footer class="recipe-footer">
+                  <a class="recipe-read-more button button-dark button-full-width" href="/recipe/3/">
+                    <i class="fas fa-eye"></i>
+                    <span>ver mais...</span>
+                  </a>
+                </footer>
+            </div>
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.co/1280x720/269fe6/png" alt="Temporário">
+                </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Rodrigo Silva
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        30/04/2025 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis illum veritatis cumque quia facere sed expedita facilis vel excepturi nam sunt voluptatum rem et laudantium, quidem consectetur! Incidunt, quae!</p>
+                </div>
+                <div class="recipe-meta-container">
+                  <div class="recipe-meta recipe-preparation">
+                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch">Preparo</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                  <div class="recipe-meta recipe-servings">
+                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice">Porções</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                </div>
+
+                <footer class="recipe-footer">
+                  <a class="recipe-read-more button button-dark button-full-width" href="/recipe/3/">
+                    <i class="fas fa-eye"></i>
+                    <span>ver mais...</span>
+                  </a>
+                </footer>
+            </div>
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.co/1280x720/269fe6/png" alt="Temporário">
+                </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Rodrigo Silva
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        30/04/2025 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis illum veritatis cumque quia facere sed expedita facilis vel excepturi nam sunt voluptatum rem et laudantium, quidem consectetur! Incidunt, quae!</p>
+                </div>
+                <div class="recipe-meta-container">
+                  <div class="recipe-meta recipe-preparation">
+                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch">Preparo</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                  <div class="recipe-meta recipe-servings">
+                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice">Porções</i> 
+                      <div class="recipe-meta-text">
+                        0 Minutos
+                      </div>
+                  </div>
+                </div>
+
+                <footer class="recipe-footer">
+                  <a class="recipe-read-more button button-dark button-full-width" href="/recipe/3/">
+                    <i class="fas fa-eye"></i>
+                    <span>ver mais...</span>
+                  </a>
+                </footer>
             </div>
         </div>
     </main>
